# huffman-coding-zipper

./: .gitignore  CMakeLists.txt  FrequencyCounter.cpp  FrequencyCounter.h  Huffman.cpp  Huffman.h  HuffmanUtility.cpp  HuffmanUtility.h  LICENSE  Node.cpp  Node.h  README.md  input.txt  main.cpp  output.txt
